# Finance_bench

./: .gitignore  CLAUDE.md  README.md  batch_pdf_to_markdown.py  batch_segment_all.py  batch_segmentation_results.json  check_page_coverage.py  download_pdfs.py  finance_document_segmenter.py  finance_pdf_downloader.py  finance_pdf_to_markdown.py  main.py  pyproject.toml  run_download.py  run_ocr.py  run_pipeline.py  run_segmentation.py  test_ocr_images.py  test_thinking_mode.py
src/ingestion/download/: batch_download.py  pdf_downloader.py
src/ingestion/ocr/: batch_ocr.py  pdf_to_markdown.py
src/ingestion/segmentation/: batch_segment.py  document_segmenter.py
src/ingestion/utils/: coverage_checker.py
src/query/: FINANCEBENCH_CLAUDE.md  accuracy_comparison.py  analyze_results.py  calculator_test_agent.py  document_reader.py  evaluation.py  evaluation_analysis_first10.json  evaluation_analysis_first10.md  evaluation_results_20250921_235039.json  evaluation_results_20250922_173925.json  evaluation_results_20250930_094944.json  financebench_agent.py  financial_calculators.py  overall_analysis.json  overall_analysis.md  score_report.py  tools.py
src/query/simple_docs/: claude_code_sdk_guide.md  one_liner_research_agent_explained.md
